--- a/pom.xml
+++ b/pom.xml
@@ -49,6 +49,13 @@
             <artifactId>lombok</artifactId>
             <optional>true</optional>
         </dependency>
+
+        <dependency>
+            <groupId>com.fujieid</groupId>
+            <artifactId>jap-simple</artifactId>
+            <version>1.0.0</version>
+        </dependency>
+
         <dependency>
             <groupId>com.fujieid</groupId>
             <artifactId>jap-social</artifactId>
