--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,17 @@
 server.port=8443
 
+
 spring.thymeleaf.cache=false
+
+
+spring.session.store-type=redis
+spring.session.timeout=PT24H
+spring.session.redis.flush-mode=immediate
+
+server.servlet.session.cookie.max-age=PT24H
+
+spring.redis.database=1
+spring.redis.host=localhost
+spring.redis.port=6379
+spring.redis.lettuce.pool.min-idle=0
+spring.redis.lettuce.pool.max-idle=8
