--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,17 +1,23 @@
 server.port=8443
-
-
 spring.thymeleaf.cache=false
 
 
+
+
+# 以下为 SSO 增强配置
+## 配置 sessionId 的 cookie domain
+server.servlet.session.cookie.domain=jap.com
+server.servlet.session.cookie.max-age=PT24H
+
+## 基于 spring-session-data-redis 实现 session 共享
 spring.session.store-type=redis
 spring.session.timeout=PT24H
 spring.session.redis.flush-mode=immediate
 
-server.servlet.session.cookie.max-age=PT24H
-
+## 基于 spring-boot-starter-data-redis 配置 redis，实现 session 的分布式存储
 spring.redis.database=1
 spring.redis.host=localhost
 spring.redis.port=6379
+spring.redis.password=123456ZHYD
 spring.redis.lettuce.pool.min-idle=0
 spring.redis.lettuce.pool.max-idle=8
