--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
 
     <properties>
         <java.version>1.8</java.version>
+        <jap.version>1.0.0-alpha.2</jap.version>
     </properties>
 
     <dependencies>
@@ -67,25 +68,25 @@
         <dependency>
             <groupId>com.fujieid</groupId>
             <artifactId>jap-simple</artifactId>
-            <version>1.0.0</version>
+            <version>${jap.version}</version>
         </dependency>
 
         <dependency>
             <groupId>com.fujieid</groupId>
             <artifactId>jap-social</artifactId>
-            <version>1.0.0</version>
+            <version>${jap.version}</version>
         </dependency>
 
         <dependency>
             <groupId>com.fujieid</groupId>
             <artifactId>jap-oauth2</artifactId>
-            <version>1.0.0</version>
+            <version>${jap.version}</version>
         </dependency>
 
         <dependency>
             <groupId>com.fujieid</groupId>
             <artifactId>jap-oidc</artifactId>
-            <version>1.0.0</version>
+            <version>${jap.version}</version>
         </dependency>
 
         <!--
