:sparkles: 调整目录修复配置文件乱码。

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,20 +1,17 @@
 server.port=8443
 spring.thymeleaf.cache=false
 
-
-
-
-# ÒÔÏÂÎª SSO ÔöÇ¿ÅäÖÃ
-## ÅäÖÃ sessionId µÄ cookie domain
+# ä»¥ä¸‹ä¸º SSO å¢å¼ºé…ç½®
+## é…ç½® sessionId çš„ cookie domain
 server.servlet.session.cookie.domain=jap.com
 server.servlet.session.cookie.max-age=PT24H
 
-## »ùÓÚ spring-session-data-redis ÊµÏÖ session ¹²Ïí
+## åŸºäº spring-session-data-redis å®ç° session å…±äº«
 spring.session.store-type=redis
 spring.session.timeout=PT24H
 spring.session.redis.flush-mode=immediate
 
-## »ùÓÚ spring-boot-starter-data-redis ÅäÖÃ redis£¬ÊµÏÖ session µÄ·Ö²¼Ê½´æ´¢
+## åŸºäº spring-boot-starter-data-redis é…ç½® redisï¼Œå®ç° session çš„åˆ†å¸ƒå¼å­˜å‚¨
 spring.redis.database=1
 spring.redis.host=localhost
 spring.redis.port=6379
