--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,17 +1,17 @@
 server.port=8443
 spring.thymeleaf.cache=false
 
-# 以下为 SSO 增强配置
-## 配置 sessionId 的 cookie domain
+# \u4EE5\u4E0B\u4E3A SSO \u589E\u5F3A\u914D\u7F6E
+## \u914D\u7F6E sessionId \u7684 cookie domain
 server.servlet.session.cookie.domain=jap.com
 server.servlet.session.cookie.max-age=PT24H
 
-## 基于 spring-session-data-redis 实现 session 共享
+## \u57FA\u4E8E spring-session-data-redis \u5B9E\u73B0 session \u5171\u4EAB
 spring.session.store-type=redis
 spring.session.timeout=PT24H
 spring.session.redis.flush-mode=immediate
 
-## 基于 spring-boot-starter-data-redis 配置 redis，实现 session 的分布式存储
+## \u57FA\u4E8E spring-boot-starter-data-redis \u914D\u7F6E redis\uFF0C\u5B9E\u73B0 session \u7684\u5206\u5E03\u5F0F\u5B58\u50A8
 spring.redis.database=1
 spring.redis.host=localhost
 spring.redis.port=6379
